Renouncing Diamond operators